fix settings title overflow

--- a/app/sass/common/_button.scss
+++ b/app/sass/common/_button.scss
@@ -2,6 +2,8 @@
 -------------------------------------------------- */
 .btn{
     padding: $app-input-padding;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
 }
 .panel,.cfg-block {
     .btn{
